# IndexKV

./: .gitignore  README.md  pyproject.toml
scripts/: run_longbench2.py  run_ruler.py
src/indexkv/: __init__.py  engine.py  manifest.py  masks.py  ops.py  registry.py  runner.py  types.py  weights.py
src/indexkv/backends/: __init__.py  base.py  llama.py
src/indexkv/eval/: __init__.py  longbench2.py  ruler.py
src/indexkv/methods/: __init__.py  chunkkv.py  full.py  hashattention.py  hata.py  range_search.py  selfindexing.py  wave_index.py
tests/: test_atomic_units.py  test_capture_storage.py  test_chunkkv_fidelity.py  test_contract.py  test_gather_equiv.py  test_prefill_mlp_chunking.py  test_runner_config.py  test_synthetic.py  test_tiny_e2e.py
